--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "app/actions.ts": {
+    "app/api/roast/route.ts": {
       "maxDuration": 30,
       "memory": 2048
     }
