--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "functions": {
     "app/api/roast/route.ts": {
       "maxDuration": 60,
-      "memory": 2048
+      "memory": 2048,
+      "includeFiles": ["node_modules/@sparticuz/chromium/**"]
     }
   }
 }
