--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "functions": {
     "app/api/roast/route.ts": {
       "maxDuration": 60,
-      "memory": 2048,
-      "includeFiles": "node_modules/@sparticuz/chromium/**"
+      "memory": 3008,
+      "includeFiles": "node_modules/@sparticuz/chromium/bin/**"
     }
   }
 }
