--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "functions": {
-    "app/api/roast/route.ts": {
-      "maxDuration": 60,
-      "memory": 2048,
-      "includeFiles": "node_modules/@sparticuz/chromium/bin/**"
-    }
-  }
+  "crons": []
 }
