--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@clerk/nextjs": "^6.35.5",
     "@neondatabase/serverless": "^1.0.2",
     "@polar-sh/sdk": "^0.41.5",
-    "@sparticuz/chromium": "^141.0.0",
+    "@sparticuz/chromium": "131.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
     "openai": "^6.9.1",
-    "puppeteer-core": "^24.31.0",
+    "puppeteer-core": "23.10.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-tweet": "^3.2.2",
@@ -35,7 +35,7 @@
     "drizzle-kit": "^0.31.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
-    "puppeteer": "^24.31.0",
+    "puppeteer": "23.10.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
